--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,14 +19,14 @@
           <div class="form-outline mb-3">
             <input type="text" id="username" class="form-control form-control-lg"
                    placeholder="Enter a valid username"/>
-            <label class="form-label" for="username">Username</label>
+            <label class="form-label" for="username">username</label>
           </div>
 
           <!-- Password input -->
           <div class="form-outline mb-3">
             <input type="password" id="pwd" class="form-control form-control-lg"
                    placeholder="Enter password"/>
-            <label class="form-label" for="pwd">Password</label>
+            <label class="form-label" for="pwd">password</label>
           </div>
 
           <div class="d-flex justify-content-between align-items-center">
