--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -5,43 +5,100 @@
 {% endblock %}
 
 {% block content %}
+{% if err_msg %}
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+  <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+  </symbol>
+  <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+  </symbol>
+  <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+  </symbol>
+</svg>
+
+<div class="alert alert-danger d-flex align-items-center" role="alert" style="
+  position: absolute;
+  top: 15%;
+  left: 85%;
+  transform: translate(-20%, -20%);
+">
+
+  <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+  <div>
+      Mat khau KHONG khop !!!
+  </div>
+</div>
+{% endif %}
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
-<div class="container">
-    <h1 class="well" style="margin-top: -14px;">Registration Form</h1>
-    <div class="col-lg-12 well">
-        <div class="row">
-            <form>
-                <div class="col-sm-12">
-                    <div class="row">
-                        <div class="col-sm-6 form-group">
-                            <label>First Name</label>
-                            <input type="text" placeholder="Enter First Name Here.." class="form-control">
-                        </div>
-                        <div class="col-sm-6 form-group">
-                            <label>Last Name</label>
-                            <input type="text" placeholder="Enter Last Name Here.." class="form-control">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label>Address</label>
-                        <textarea placeholder="Enter Address Here.." rows="3" class="form-control"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label>Phone Number</label>
-                        <input type="text" placeholder="Enter Phone Number Here.." class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label>Email Address</label>
-                        <input type="text" placeholder="Enter Email Address Here.." class="form-control">
-                    </div>
-                    <button type="button" class="btn btn-lg btn-info">Submit</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+<section class="vh-100 bg-image"
+  style="background-image: url('https://www.metoffice.gov.uk/binaries/content/gallery/metofficegovuk/hero-images/weather/cloud/cumulus-cloud.jpg    ');">
+  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+
+      <div class="container">
+          <div class="col-lg-8 card" style="position: absolute; top: 22%; left: 18%; border-radius: 15px;">
+              <div class="card-body p-5">
+                  <h2 class="text-uppercase text-center mb-5 " style="font-weight: bold;">Create an account</h2>
+                  <div class="row">
+                      <form method="POST" action="/register">
+                          <div class="col-sm-12">
+                              <div class="row">
+                                  <div class="form-group">
+                                      <label for="fullname">Full Name</label>
+                                      <input type="text" placeholder="Enter Full Name Here.." class="form-control"
+                                             id="fullname" name="fullname" required/>
+                                  </div>
+                                  <div class="col-sm-6 form-group">
+                                      <label for="username">Username</label>
+                                      <input type="text" placeholder="Enter Username Here.." class="form-control"
+                                             id="username" name="username" required/>
+                                  </div>
+                                  <div class="col-sm-6 form-group">
+                                      <label for="address">Address</label>
+                                      <input type="text" placeholder="Enter Address Here.." class="form-control"
+                                             id="address" name="address" required/>
+                                  </div>
+
+                                  <div class="col-sm-6 form-group">
+                                      <label for="pwd" >Password</label>
+                                      <input type="password" placeholder="Enter Password Here.." class="form-control"
+                                             id="pwd" name="password" required/>
+                                  </div>
+
+                                  <div class="col-sm-6 form-group">
+                                      <label for="confirm">Confirm Password</label>
+                                      <input type="password" placeholder="Enter Confirm Password Here.." class="form-control"
+                                             id="confirm" name="confirm" required/>
+                                  </div>
+
+                                  <div class="col-sm-6 form-group">
+                                      <label for="phone">Phone Number</label>
+                                      <input type="number" placeholder="Enter Phone Number Here.." class="form-control"
+                                             id="phone" name="phone" required/>
+                                  </div>
+                                  <div class="col-sm-6 form-group">
+                                      <label class="form-label" for="Date">Date</label>
+                                      <input type="date" class="form-control form-control-lg"
+                                             id="Date" name="date" required />
+                                  </div>
+                                  <div class="form-group">
+                                      <label for="email">Email</label>
+                                      <input type="email" placeholder="Enter Email Address Here.." class="form-control"
+                                             id="email" name="email" required/>
+                                  </div>
+                                  <button type="submit" class="btn btn-lg btn-info"
+                                          style="background-color: #32CD32; font-weight: bold">Submit
+                                  </button>
+                              </div>
+                          </div>
+                      </form>
+                  </div>
+              </div>
+          </div>
+</section>
 {% endblock %}
