--- a/app/templates/user_info.html
+++ b/app/templates/user_info.html
@@ -147,7 +147,7 @@
 			<tr>
 				<td>
 					<div class="nav-item">
-						<a href="/user-info/account/{{ current_user.id }}" class="change-password-link"
+						<a href="/user-info/account/repassword/{{ current_user.id }}" class="change-password-link"
 						   style="position: relative; text-decoration: underline; font-size : 20px;  color:#0080ff;  top: 92px; left:110%;">Đổi
 							mật khẩu</a>
 
