--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,9 +1,11 @@
 {% extends 'admin/base.html' %}
 
 {% block body %}
-{% if is_admin() %}
+
+{% if current_user.user_role.value == 3 %}
 <h1 class="text-center text-danger">THONG KE DOANH THU</h1>
 {% else %}
 <h1 class="text-center text-danger">Bạn không có quyền truy cập</h1>
 {% endif %}
+
 {% endblock %}
