--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -3,9 +3,11 @@
 {% block body %}
 
 {% if current_user.user_role.value == 3 %}
-<h1 class="text-center text-danger">THONG KE DOANH THU</h1>
+<h1 class=  "text-center text-danger">THONG KE DOANH THU</h1>
 {% else %}
-<h1 class="text-center text-danger">Bạn không có quyền truy cập</h1>
+<script>
+window.location.href = '/error';
+</script>
 {% endif %}
 
 {% endblock %}
