--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,8 +1,6 @@
 {% extends 'layout/base.html' %}
 
-{% block title %}
-Đăng ký
-{% endblock %}
+{% block title %}Đăng ký{% endblock %}
 
 {% block content %}
 {% if err_msg %}
@@ -34,7 +32,7 @@
     </div>
 </div>
 {% endif %}
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">-->
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
