--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -1,44 +1,52 @@
-
-<!--<div class="container mt-3">-->
-<nav class="navbar navbar-light bg-white">
-    <div class="container mt-3">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="navbar-brand" href="/">
-                    <span style="color: #4682B4; font-family: Arial, Helvetica, sans-serif; font-size: 32px; font-weight: bold; position: absolute; top: 10%; left: 12%; transform: translate(-10%, -10%);">OU AIRLINE.com</span>
-                </a>
-            </li>
-            {% if current_user.is_authenticated %}
-            <li class="nav-item"
-                style="position: absolute; top: 0; right: 0; width: 40%; height: 110%; display: flex;">
-                <a class="nav-link" style="color: black; font-size: 18px;" href="/user-info/account/{{ current_user.id }}">
-                    <img src="https://toppng.com/uploads/preview/circled-user-icon-user-pro-icon-11553397069rpnu1bqqup.png"
-                         alt="User icon" style="width: 20px; height: 20px; margin-right: 5px;">
-                    {{ current_user.username }} |
-                </a>
-            </li>
-            <li class="nav-item"
-                style="position: absolute; top: 0; right: 0; width: 31.5%; height: 110%; animation: nav-links-animation 5s infinite ease-in-out;">
+<div>
+    <nav class="navbar navbar-light bg-white">
+        <div class="container mt-5">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="navbar-brand" href="/">
+                        <span style="color: #4682B4; font-family: Arial, Helvetica, sans-serif; font-size: 32px; font-weight: bold; position: absolute; top: 23px; left: 200px; transform: translate(-10%, -10%);">OU AIRLINE.com</span>
+                    </a>
+                </li>
                 {% if current_user.is_authenticated %}
-                <a class="nav-link" style="color : #4682B4; font-size : 18px" href="/user-logout">Đăng xuất</a>
+                <li class="nav-item"
+                    style="position: absolute; top: 8px; right: 180px; width: 100px; height: 40px; animation: nav-links-animation 5s infinite ease-in-out;">
+                    <a class="nav-link" style="color: black; font-size: 18px;"
+                        href="/user-info/account/{{ current_user.id }}">
+                        <img src="https://i.ibb.co/jVBW6fY/avatar-person-profile-user-icon-1320166578424287581.png"
+                             alt="User icon" style="position: absolute; top: 3px; right: -35px; width: 40px; height: 40px;">
+                        {{ current_user.username }} |
+                    </a>
+                </li>
+                {% if current_user.user_role.value == 2 %}
+                    <li class="nav-item"
+                        style="position: absolute; top: 50px; right: 250px; width: 150px; height: 0px; animation: nav-links-animation 5s infinite ease-in-out;">
+                        <a class="nav-link" style="color : #4682B4; font-size : 18px" href="/add_flights">Thêm chuyến bay</a>
+                    </li>
                 {% endif %}
-            </li>
-            <li class="nav-item"
-                style="position: absolute; top: 12; right: 0; width: 31.5%; height: 110%; animation: nav-links-animation 5s infinite ease-in-out;">
                 {% if current_user.user_role.value == 3 %}
-                <a class="nav-link" style="color : #4682B4; font-size : 18px" href="/admin">Quản trị</a>
+                    <li class="nav-item"
+                        style="position: absolute; top: 50px; right: 250px; width: 150px; height: 0px; animation: nav-links-animation 5s infinite ease-in-out;">
+                                <a class="nav-link" style="color : #4682B4; font-size : 18px" href="/admin">Quản trị</a>
+                    </li>
                 {% endif %}
-            </li>
-            {% else %}
-            <li class="nav-item"
-                style="position: absolute; top: 0; right: 0; width: 40%; height: 110%; animation: nav-links-animation 5s infinite ease-in-out;">
-                <a class="nav-link" style="color: black; font-size : 18px;" href="/user-login ">ĐĂNG NHẬP |</a>
-            </li>
-            <li class="nav-item"
-                style="position: absolute; top: 0; right: 0; width: 32%; height: 110%; animation: nav-links-animation 5s infinite ease-in-out;">
-                <a class="nav-link" style="color : #4682B4; font-size : 18px" href="/register">ĐĂNG KÝ</a>
-            </li>
-            {% endif %}
-        </ul>
-    </div>
-</nav>
+                <li class="nav-item"
+                    style="position: absolute; top: 50px; right: 120px; width: 110px; height: 40px;">
+                    {% if current_user.is_authenticated %}
+                    <a class="nav-link" style="color : #4682B4; font-size : 18px" href="/user-logout">Đăng xuất</a>
+                    {% endif %}
+                </li>
+                {% else %}
+                <li class="nav-item"
+                    style="position: absolute; top: 8px; right: 277px; width: 110px; height: 40px; animation: nav-links-animation 5s infinite ease-in-out;">
+                    <a class="nav-link" style="color: black; font-size : 18px;" href="/user-login ">ĐĂNG NHẬP </a>
+                </li>
+                <li class="nav-item"
+                    style="position: absolute; top: 8px; right: 180px; width: 100px; height: 40px; animation: nav-links-animation 5s infinite ease-in-out;">
+                    <a class="nav-link" style="color : #4682B4; font-size : 18px" href="/register">| ĐĂNG KÝ</a>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+    <hr style="margin: 0">
+</div>
