--- a/app/templates/admin/flight_management.html
+++ b/app/templates/admin/flight_management.html
@@ -4,67 +4,85 @@
 <div class="container mt-3">
     <div class="row">
         <div class="col-md-13 offset-md-0">
-            <form accept="" class="shadow p-4" style="height: 350px;" method="post" action="/admin/flightview">
+            <form accept="" class="shadow p-4" style="height: 350px;" method="POST" action="/admin/flightview">
                  <div class="row">
                      <div class="col-sm-6 form-group">
-                         <label for="airport1">Sân bay đi : </label>
+                         <label for="airport1">Sân bay đi : <span
+                            class="text-danger" style="color:red;">*</span></label>
                          <input type="text" placeholder="Nhập sân bay đi.." class="form-control"
                                                id="airport1" name="sb1" required/>
                      </div>
                      <div class="col-sm-6 form-group">
-                         <label for="airport2">Sân bay đến : </label>
+                         <label for="airport2">Sân bay đến : <span
+                            class="text-danger" style="color:red;">*</span></label>
                          <input type="text" placeholder="Nhập sân bay đến.." class="form-control"
                                                id="airport2" name="sb2" required/>
                      </div>
-                     <div class="col-sm-3 form-group">
-                         <label for="time1">Thời gian đi : </label>
-                         <input type="time" class="form-control form-control-ml"
-                                               id="time1" name="time1" required/>
-                     </div>
 
                      <div class="col-sm-3 form-group">
-                         <label for="time2">Thời gian đến : </label>
-                         <input type="time" class="form-control form-control-ml"
-                                               id="time2" name="time2" required/>
+                         <label for="date">Ngày : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <input type="date" class="form-control form-control-ml"
+                                               id="date" name="date"/>
                      </div>
 
+                    <div class="col-sm-3 form-group">
+                      <label for="time1">Thời gian khởi hành : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                      <input type="text" class="form-control" id="time1" name="time1"/>
+                    </div>
+
+
+
                      <div class="col-sm-3 form-group">
-                         <label for="quantity1">Số lượng vé loại 1 : </label>
+                         <label for="quantity1">Số lượng vé loại 1 : <span
+                            class="text-danger" style="color:red;">*</span></label>
                          <input type="text" placeholder="Nhập số lượng vé.." class="form-control"
                                                id="quantity1" name="quantity1" required/>
                      </div>
 
                      <div class="col-sm-3 form-group">
-                         <label for="quantity2">Số lượng vé loại 2 : </label>
+                         <label for="quantity2">Số lượng vé loại 2 : <span
+                            class="text-danger" style="color:red;">*</span></label>
                          <input type="text" placeholder="Nhập số lượng vé.." class="form-control"
                                                id="quantity2" name="quantity2" required/>
                      </div>
 
                      <div class="col-sm-3 form-group">
-                         <label for="AP_TG1">Sân bay trung gian : </label>
+                         <label for="AP_TG1">Sân bay trung gian : <span
+                            class="text-danger" style="color:red;">*</span></label>
                          <input type="text" placeholder="Nhập sân bay.."
                                                class="form-control"
                                                id="AP_TG1" name="sb3" required/>
                          <br>
                          <input type="text" placeholder= "Nhập sân bay 2.. (Nếu có)"
                                                class="form-control"
-                                               id="AP_TG2" name="sb4" required/>
+                                               id="AP_TG2" name="sb4">
                      </div>
 
                      <div class="col-sm-3 form-group">
-                         <label for="pendingT">Thời gian dừng : </label>
+                         <label for="time2">Thời gian dừng : <span
+                            class="text-danger" style="color:red;">*</span></label>
                          <input type="text" placeholder="Nhập thời gian.."
                                                class="form-control"
-                                               id="pendingT" name="pendingT" required/>
+                                               id="time2" name="time2" required/>
                          <br>
-                         <label class="form-label" style="position: relative; top: -23px;" for="Date">Ngày đi : </label>
-                         <input type="date" style="position: relative; top: -30px;" class="form-control form-control-mg"
-                                               id="Date" name="date" required/>
-
+                         <input type="text" placeholder="Nhập thời gian.."
+                                               class="form-control"
+                                               id="time3" name="time3"/>
                      </div>
 
-                     <div class="col-sm-6 form-group">
-                         <label class="form-label" for="note">Ghi chú</label>
+                     <div class="col-sm-3 form-group">
+                         <label class="form-label" for="note">Thời gian bay : <span
+                            class="text-danger" style="color:red;">*</span></label>
+                         <input type="text" placeholder="Nhập thời gian.."
+                                               class="form-control"
+                                               id="time4" name="time4" required/>
+                     </div>
+
+                     <div class="col-sm-3 form-group">
+                         <label class="form-label" for="note">Ghi chú : <span
+                            class="text-danger" style="color:red;">*</span></label>
                          <input type="text" placeholder="Nhập ghi chú.."
                                                class="form-control"
                                                id="note" name="note" required/>
@@ -75,28 +93,29 @@
 
 
                 <section style="position: relative;">
-                    <div class="mb-3" style="text-align: right; position: absolute; top: -85px; left: 84%;">
+                    <div class="mb-3" style="text-align: right; position: absolute; top: -55px; left: 84%;">
                         <button type="submit" class="btn btn-success">Tạo lịch chuyến bay</button>
                     </div>
                 </section>
 
             </form>
 
-            <form accept="" class="shadow p-4 mt-4" style="height: 500px; width: 120%; margin-left: -120px;">
+            <form accept="" class="shadow p-4 mt-4" style="height: 500px; width: 135%; margin-left: -193px;">
                 <h3>LỊCH CHUYẾN BAY ĐÃ TẠO </h3>
                 <hr width="100%"  color="blue">
                 <table>
                     <tr>
-                        <td>Id</td>
-                        <td style="position: relative; padding-left: 50px;">Sân bay đi</td>
-                        <td style="position: relative; padding-left: 50px;">Sân bay đến</td>
-                        <td style="position: relative; padding-left: 50px;">Thời gian đi</td>
-                        <td style="position: relative; padding-left: 50px;">Thời gian đến</td>
-                        <td style="position: relative; padding-left: 50px;">Vé hạng 1</td>
-                        <td style="position: relative; padding-left: 50px;">Vé hạng 2</td>
-                        <td style="position: relative; padding-left: 50px;">Sân bay trung gian</td>
-                        <td style="position: relative; padding-left: 50px;">Thời gian dừng</td>
-                        <td style="position: relative; padding-left: 50px;">Tình trạng </td>
+                        <th>Id</th>
+                        <th style="position: relative; padding-left: 50px; ">Sân bay đi</th>
+                        <th style="position: relative; padding-left: 50px;">Sân bay đến</th>
+                        <th style="position: relative; padding-left: 50px;">Ngày</th>
+                        <th style="position: relative; padding-left: 50px;">TG khởi hành</th>
+                        <th style="position: relative; padding-left: 50px;">Thời gian bay</th>
+                        <th style="position: relative; padding-left: 50px;">Vé hạng 1</th>
+                        <th style="position: relative; padding-left: 50px;">Vé hạng 2</th>
+                        <th style="position: relative; padding-left: 50px;">Sân bay trung gian</th>
+                        <th style="position: relative; padding-left: 50px;">Thời gian dừng</th>
+                        <th style="position: relative; padding-left: 50px;">Tình trạng </th>
                     </tr>
                 </table>
                 <hr width="100%"  color="blue">
@@ -105,21 +124,32 @@
                     {% for u in Flight %}
                     <tr>
                         <td>{{ u.id }} </td>
-                        <td style="position: relative; padding-left: 50px;">{{ u.D_air }}</td>
-                        <td style="position: relative; padding-left: 30px;">{{ u.A_air }}</td>
-                        <td style="position: relative; padding-left: 45px;">{{ u.T_time}}</td>
-                        <td style="position: relative; padding-left: 70px;">{{ u.A_time }}</td>
-                        <td style="position: relative; padding-left: 100px;">{{ u.T1_quantity }}</td>
-                        <td style="position: relative; padding-left: 100px;">{{ u.T2_quantity }}</td>
-                        <td style="position: relative; padding-left: 100px;">{{ u.I_air }}</td>
-                        <td style="position: relative; padding-left: 100px;">{{ u.S_time }}</td>
+                        <td style="position: relative; left: 55px;">{{ u.D_air }}</td>
+                        <td style="position: relative; left: 105px;">{{ u.A_air }}</td>
+                        <td style="position: relative; left: 140px;">{{ u.Date}}</td>
+                        <td style="position: relative; left: 180px;">{{ u.T_time }}</td>
+                        <td style="position: relative; left: 270px;">{{ u.Flight_time }} phút</td>
+                        <td style="position: relative; left: 360px;">{{ u.T1_quantity }}</td>
+                        <td style="position: relative; left: 470px;">{{ u.T2_quantity }}</td>
+                        {% if u.I2_air != '' %}
+                        <td style="position: relative; left: 550px;">{{ u.I_air }}, {{u.I2_air}}</td>
+                        {% else %}
+                        <td style="position: relative; left: 550px;">{{ u.I_air }}</td>
+                        {% endif%}
+
+                        {% if u.S2_time > '0' %}
+                        <td style="position: relative; left: 625px; ">{{ u.S_time }}, {{u.S2_time}} phút</td>
+                        {% else %}
+                        <td style="position: relative; left: 675px; ">{{ u.S_time }} phút</td>
+                        {%endif%}
+
                         {% if u.note == '1' %}
-                        <td  style="position: relative; padding-left: 110px;">&#9989;</td>
-                        {% elif u.note == '0' %} <td style="position: relative; padding-left: 110px; font-size:15px;">&#10060;</td>
-                        {% else %}  <td  style="position: relative; padding-left: 95px;">{{ u.note }}</td>
+                        <td  style="position: relative; left: 715px;">&#9989;</td>
+                        {% elif u.note == '0' %} <td style="position: relative; left: 715px;">&#10060;</td>
+                        {% else %}  <td  style="position: relative; left: 710px; ">{{ u.note }}</td>
                         {% endif %}
-
-
+                        <td style="position: relative; top: -7px; left: 745px;"><a href="/admin/flightview/{{u.id}}/edit"><img src="https://cdn-icons-png.flaticon.com/512/7398/7398464.png"
+                                                                        style="position: absolute; width: 16px; height: 18px; left: 5%;"></a></td>
                     </tr>
                     {% endfor %}
                 </table>
