--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -15,6 +15,8 @@
             crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="favicon.png">
 
+    <link href="{{ url_for('static', filename='CSS/index.css') }}" rel="stylesheet">
+
 </head>
 <body>
 
