--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -1,10 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>
+    </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="favicon.png">
+
+    <link href="{{ url_for('static', filename='CSS/index.css') }}" rel="stylesheet">
+
+</head>
+<body>
 <div>
     <nav class="navbar navbar-light bg-white">
         <div class="container mt-5">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="navbar-brand" href="/">
-                        <span style="color: #4682B4; font-family: Arial, Helvetica, sans-serif; font-size: 32px; font-weight: bold; position: absolute; top: 23px; left: 200px; transform: translate(-10%, -10%);">OU AIRLINE.com</span>
+                        <span style="color: #364681; font-family: Arial, Helvetica, sans-serif; font-size: 32px; font-weight: bold; position: absolute; top: 23px; left: 200px; transform: translate(-10%, -10%);">OU AIRLINE.com</span>
                     </a>
                 </li>
                 {% if current_user.is_authenticated %}
@@ -42,7 +62,7 @@
                 </li>
                 <li class="nav-item"
                     style="position: absolute; top: 8px; right: 180px; width: 100px; height: 40px; animation: nav-links-animation 5s infinite ease-in-out;">
-                    <a class="nav-link" style="color : #4682B4; font-size : 18px" href="/register">| ĐĂNG KÝ</a>
+                    <a class="nav-link" style="color : #364681; font-size : 18px" href="/register">| ĐĂNG KÝ</a>
                 </li>
                 {% endif %}
             </ul>
@@ -50,3 +70,4 @@
     </nav>
     <hr style="margin: 0">
 </div>
+</body>
