--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OUAirlines - Hãng hàng không uy tín</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
 
         .footer {
             background-color: #364681;
             color: #fff;
             padding: 20px;
             text-align: center;
+            position: relative;
+
         }
 
         .footer a {
