--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -3,11 +3,66 @@
 {% block body %}
 
 {% if current_user.user_role.value == 3 %}
-<h1 class=  "text-center text-danger">THONG KE DOANH THU</h1>
-{% else %}
+<h1 class="text-center text-primary">CHÀO MỪNG ĐẾN TRANG QUẢN TRỊ!</h1>
+<h2 class="text-primary">Chào {{ current_user.username }}!</h2>
+
+<div class="row">
+    <div class="col-md-5 col-xs-12">
+        <table class="table">
+            <tr>
+                <th>Mã CB</th>
+                <th>Tên tuyến bay</th>
+                <th>Số lượng chuyến bay</th>
+            </tr>
+            {% for s in stats %}
+            <tr>
+                <td>{{ s[0] }}</td>
+                <td>{{ s[1] }}</td>
+                <td>{{ s[2] }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+    <div class="col-md-5 col-xs-12">
+        <canvas id="myChart"></canvas>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
-window.location.href = '/error';
+window.onload = function() {
+  const ctx = document.getElementById('myChart');
+
+  let data = [];
+  let labels = [];
+
+  {% for s in stats %}
+  labels.push('{{s[1]}}')
+  data.push({{s[2]}});
+  {% endfor %}
+
+  new Chart(ctx, {
+    type: 'pie',
+    data: {
+      labels: labels,
+      datasets: [{
+        label: '# Doanh thu',
+        data: data,
+        borderWidth: 1,
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+}
 </script>
+
+
 {% endif %}
 
 {% endblock %}
