update giao dien nhap info KH

--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -5,24 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OUAirlines - Hãng hàng không uy tín</title>
     <style>
-
         .footer {
             background-color: #364681;
             color: #fff;
             padding: 20px;
             text-align: center;
             position: relative;
+            bottom 0;
+            left: 0;
 
         }
-
         .footer a {
             color: #fff;
             text-decoration: none;
         }
 
-        .footer a:hover {
-            text-decoration: underline;
-        }
     </style>
 </head>
 <body>
