--- a/app/static/CSS/flight_list.css
+++ b/app/static/CSS/flight_list.css
@@ -5,33 +5,18 @@
             margin: 0;
     }
     .search-container-2 {
-
         background-color: white;
         padding: 30px;
         border-radius: 20px;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-
         left: 50%;
     }
-    background-image{
-        opacity:0.6;
-    }
-    .background{
-        background-image: url("/static/Image/background.jpg");
-        background-size: 100% 100%;
-        height: 100vh;
+    .background_flight_list{
+        background-image: url('/static/Image/1.png');
+        background-size: 990px;
         width: 100%;
-        background-repeat: repeat-x;
+        background-repeat: repeat;
         position: relative;
-
-    }
-    .background::before{
-        position: absolute;
-        top: 0;
-        bottom:0;
-        left:0;
-        right:0;
-        background: rgba(0,0,0,0.7);
     }
 
     .container-flight{
@@ -64,12 +49,12 @@
         width: 100%;
         display: flex;
         flex-direction: row;
-        gap: 10%;
+        gap: 100px;
     }
 
     .con1{
         background-color: white;
-        width: 25%;
+        width: 30%;
         height: 450px;
         border-radius: 20px;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
@@ -142,9 +127,9 @@
         width: 65%;
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        gap: 20px;
     }
-    .con2-1{
+    .con2_1{
         background-color: white;
         width: 100%;
         border-radius: 20px;
@@ -190,12 +175,10 @@
     .chau{
         width: 100%;
         height: auto;
-
         border-radius: 20px;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         cursor: pointer;
         transition: height 2s;
-
     }
     .chau1{
         width: 100%;
@@ -206,13 +189,11 @@
         align-items: flex-start;
         justify-content: center;
         gap: 6.5%;
-
     }
     .chau2{
         display: none;
         flex-direction: row;
         justify-content: center;
-        position: relative;
         width: 100%;
         height: 300px;
         padding: 10px;
@@ -316,37 +297,43 @@
         border-radius: 20px;
         box-shadow: rgba(0, 0, 0, 0.5);
         color: #364681;
-        border: 1px solid #E09824;
+        border: 3px solid #E09824;
     }
-    .CustomerInfo_customer-info{
+
+    .con2_2{
+        width: 100%;
+        height: 60px;
         display: flex;
-        flex-direction: column;
-        border-radius: 20px;
-        border: 1px solid var(--gray-200,#eaecf0);
-        background: var(--base-white,#fff);
+        justify-content: flex-end;
+    }
+    .btn_next{
+        background-color: #364681;
+        width: 120px;
+        height: 100%;
+        padding: 10px;
+        border-radius: 30px;
+        color: white;
+        border: 3px solid #ffff;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    }
-    .CustomerInfo_customer-info__header{
         display: flex;
-        flex-direction: column;
-        padding: 20px 24px;
-        gap: 16px;
         justify-content: center;
-        border-bottom: 1px solid var(--gray-200,#eaecf0);
+        align-items: center;
     }
-    .Subheading{
-        font-size: 20px;
-        line-height: 28px;
-        font-weight: 700;
-    }
-    .Submiddel{
-        font-size: 14px;
-        line-height: 20px;
-        font-weight: 400;
-    }
-    .CustomerInfo_customer-info__content{
+    .btn_back{
+        background-color: #F8F9FA;
+        width: 120px;
+        height: 100%;
+        padding: 10px;
+        border-radius: 30px;
+        color: #364681;
+        border: 3px solid #364681;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
         display: flex;
-        flex-direction:column;
-        gap: 16px;
-        padding: 20px 24px;
+        justify-content: center;
+        align-items: center;
+    }
+    .end_web{
+        background-color: blue;
+        width: 100%;
+        height: 300px;
     }
