--- a/app/templates/flight_list.html
+++ b/app/templates/flight_list.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>OUAirlines</title>
     <link href="{{ url_for('static', filename='CSS/flight_list.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='Image/background.jpg') }}" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script src="/static/JS/function.js"></script>
 </head>
 <body>
 {% include 'layout/header.html' %}
 <div class="Layout-main">
-    <div class="background">
+    <div class="background_flight_list">
         <div class="container-flight">
             <div class="Card-card FlightSearchNavigation_wrapper">
                 <div class="search-container-2">
@@ -108,7 +106,7 @@
                         </div>
                     </div>
                     <div class="con2">
-                        <div class="con2-1">
+                        <div class="con2_1">
                             <div class="Flightscard_header">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200">
                                     <image xlink:href="/static/Image/logo-OUAir.png" width="80" height="80"/>
@@ -123,7 +121,7 @@
                                         <label style="color: #364681;">{{ arrival }}</label>
                                     </div>
                                     <div class="Flightscard_header_lb" style="font-weight: normal; font-size: 15px;">
-                                        <label>{{ departure_date }}</label>
+                                        <label>{{ departure_date.strftime('%Y-%m-%d') }}</label>
                                     </div>
                                 </div>
                             </div>
@@ -136,12 +134,6 @@
                                             <label style="color: #364681;">{{ f.D_air }}</label>
                                         </div>
                                         <div class="chat1">
-                                            <!--                                                    <script>-->
-                                            <!--                                                        const gioBay ='{{ f.giobay }}';-->
-                                            <!--                                                        const gioBayFormatted = moment(gioBay).format('HH:mm');-->
-                                            <!--                                                        var labelGioBay = -->
-                                            <!--                                                        document.getElementById("gioBay").textContent = gioBayFormatted;-->
-                                            <!--                                                    </script>-->
                                             <label for="gioBay" id="gioBay">{{ f.T_time.strftime('%H:%M') }} </label>
                                         </div>
                                     </div>
@@ -157,20 +149,23 @@
                                         </div>
                                     </div>
                                     <div class="chat" style="justify-content: center; align-items: center; ">
-                                        <button type="submit" class="btn-chiTietChuyenBay" onclick="ChiTietChuyenBay()">
+                                        <button type="submit" class="btn-chiTietChuyenBay" onclick="ChiTietChuyenBay('{{ f.id }}')">
                                             Chi Tiết
                                         </button>
+
                                         <script>
-                                            function ChiTietChuyenBay(){
-                                                    if(document.getElementById('chau2').style.display == 'none')
-                                                        document.getElementById('chau2').style.display = 'flex';
-                                                    else
-                                                        document.getElementById('chau2').style.display = 'none';
+                                            function ChiTietChuyenBay(flightId) {
+                                                var elementId = 'chau2-' + flightId;
+                                                var element = document.getElementById(elementId);
+                                                if (element.style.display == 'none')
+                                                    element.style.display = 'flex';
+                                                else
+                                                    element.style.display = 'none';
                                             }
                                         </script>
                                     </div>
                                 </div>
-                                <div id="chau2" class="chau2">
+                                <div id="chau2-{{ f.id }}" class="chau2">
                                     <div class="chit">
                                         <div class="chit1" style="color: white">
                                             <div class="chit2" style="font-size: 20px; font-weight: bold;">"1st"<br>CLASS
@@ -210,23 +205,12 @@
                             </div>
                             {% endfor %}
                         </div>
-<!--                    <form>-->
-<!--                                                    <div class="CustomerInfo_customer-info">-->
-<!--                                                        <div class="CustomerInfo_customer-info__header">-->
-<!--                                                            <div class="Subheading">Thông tin hành khách</div>-->
-<!--                                                            <p class="Submiddel" style="margin: 0;">* Quý Khách vui lòng sử dụng tiếng Việt không dấu và không sử dụng các ký tự đặc biệt.-->
-<!--                                                                <br>* Vui lòng nhập đầy đủ tên hành khách và những thông tin khác xuất hiện trên (các) giấy tờ tùy thân do chính phủ cấp của hành khách.-->
-<!--                                                            </p>-->
-<!--                                                        </div>-->
-<!--                                                        <div class="CustomerInfo_customer-info__content">-->
 
-<!--                                                        </div>-->
-<!--                                                    </div>-->
-<!--                                                </form>-->
-<!--                                                <form>-->
-<!--                                                    <div class="con2-1"></div>-->
-<!--                                                </form>-->
-                        <div class=""></div>
+                        <div class="con2_2">
+                            <button type="button" class="btn_next">
+                                <label>Tiếp tục →</label>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -235,7 +219,5 @@
 </div>
 {% include 'layout/footer.html' %}
 </body>
-<script>
 
-</script>
 </html>
